Bug 294636 - Encoding selection misbehaves when importing a CSV file
Summary: Encoding selection misbehaves when importing a CSV file
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Migration/Import/Export (other bugs)
Version First Reported In: 2.3.3 (KOffice 2.3.3)
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-22 20:13 UTC by Avihay
Modified: 2012-08-11 11:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4 rc1 (Calligra 2.4 rc1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Avihay 2012-02-22 20:13:20 UTC
Version:           2.3.3 (KOffice 2.3.3) (using KDE 4.7.4) 
OS:                Linux

I tried to import a CSV.
The document was in the cp-1255 encoding.
I selected cp-1255 from the drop down list in the options dialog of the import CVS wizard, and clicked ok.
The (interpretation of the) encoding of the document didn't change properly (at all?). and when I entered the options dialog box again, it was set to the encoding below the one I selected. trying to select the encoding before cp-1255 did set the encoding drop list to cp-1255, but the encoding still didn't fit.
tried a few other encoding, and this happens in all of them except for the default UTF-8 encoding (happens with the non-default UTF-8 entry though, last entry changes to empty text, didn't try beyond that)

Reproducible: Always

Steps to Reproduce:
Generate a CSV file with special characters (index above 128, I think) in a non-unicode encoding
In Kexi, open a new empty project.
Press import data from file under the External Data tab in the toolbar.
Open said CSV file.
Observe that the special characters don't appear as in Kate
Press the Options button.
Select the appropriate encoding and click ok.

Actual Results:  
Special characters still appear wrong.
When clicking Options, the encoding changed from the value you've set to the one below.

Expected Results:  
Special characters should appear properly (as in, say, Kate).
When clicking Options, the encoding should be the same one you've set in the last step.

OS: Linux (i686) release 3.0.0-13-generic
Compiler: gcc
More or less a standard Kubuntu 11.10 installation.
Comment 1 Jarosław Staniek 2012-02-27 00:14:58 UTC
Git commit a8a99c4dc5f628f67e085d89c6ca148041c2ba77 by Jaroslaw Staniek.
Committed on 27/02/2012 at 01:12.
Pushed by staniek into branch 'master'.

Fixed misbehaving encoding selection when importing a CSV file

CSV Import
*Fixed bug: encoding selection misbehaves when importing a CSV file
**encoding selection was not retained between first and another displaying of the CSV Import Options dialog
**encoding selection made in the CSV Import Options dialog was not applied to the importing preview and process

M  +3    -4    kexi/plugins/importexport/csv/kexicsvimportdialog.cpp
M  +2    -2    kexi/plugins/importexport/csv/kexicsvimportoptionsdlg.cpp
M  +1    -1    kexi/plugins/importexport/csv/kexicsvimportoptionsdlg.h
M  +2    -3    kexi/widget/kexicharencodingcombobox.cpp
M  +1    -1    kexi/widget/kexicharencodingcombobox.h

http://commits.kde.org/calligra/a8a99c4dc5f628f67e085d89c6ca148041c2ba77