Fixed misbehaving encoding selection when importing a CSV file

CSV Import
*Fixed bug: encoding selection misbehaves when importing a CSV file
**encoding selection was not retained between first and another displaying of the CSV Import Options dialog
**encoding selection made in the CSV Import Options dialog was not applied to the importing preview and process

BUG:294636